--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    xmlns:tools="http://schemas.android.com/tools"
     package="abbesolo.com.realestatemanager">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the "MyLocation" functionality.
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <dist:module dist:instant="true" />
@@ -19,47 +13,38 @@
     <uses-permission android:name="android.permission.WRITE_REAL_ESTATE_DATABASE" />
 
     <application
+        android:name=".RMApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".RMApplication">
+        android:theme="@style/AppTheme">
 
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
+        <!-- ************************** Google Maps ******************************************** -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <!-- ************************** Google Maps ******************************************** -->
+
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" /> <!-- ************************** Activities ********************************************* -->
-        <activity
-            android:name=".ui.MainActivity"
-            android:theme="@style/AppTheme">
+            android:value="@integer/google_play_services_version" />
+
+        <!-- ************************** Activities ********************************************* -->
+
+        <activity android:name=".ui.ResgisterActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- A child of the main activity -->
-        <activity
-            android:name=".ui.MapsActivity"
-            android:label="MapsActivity"
-            android:parentActivityName=".ui.MainActivity">
+        </activity>
 
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.MainActivity" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:theme="@style/AppTheme">
+
         </activity>
 
         <provider
@@ -68,7 +53,7 @@
             android:enabled="true"
             android:exported="true"
             android:readPermission="android.permission.READ_REAL_ESTATE_DATABASE"
-            android:writePermission="android.permission.WRITE_REAL_ESTATE_DATABASE"/>
+            android:writePermission="android.permission.WRITE_REAL_ESTATE_DATABASE" />
     </application>
 
 </manifest>
