--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,12 +65,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha05"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha05"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha06"
 
     // Room
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+    implementation 'androidx.annotation:annotation:1.2.0'
     kapt "androidx.room:room-compiler:2.3.0"
 
     // Coroutines
@@ -129,6 +130,8 @@ dependencies {
 
     // Mockito-Kotlin
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+
+
 
     // Rules
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
