--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'koin'
 
-
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
 
 android {
     compileSdkVersion 30
@@ -27,9 +28,13 @@ android {
         multiDexEnabled true
 
         // API Keys in GRADLE_USER_HOME directory
-        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY___REAL_ESTATE_MANAGER") ?: "")
+
+//        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY___REAL_ESTATE_MANAGER") ?: "")
     }
     buildTypes {
+        debug {
+            resValue("string", "google_maps_key", localProperties['apiKey'])
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
